data/derived/comb/progs/unify/prog8877.ml.out
Characters 76-87:
  let f a x = match x with (x1,x2) -> (0,x1 + x2) @ a in
                                      ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
